2010-05-27  Chris Toshok  <toshok@ximian.com>

	* Events.cs: add dispatcher for
	EventHandler<CaptureImageCompletedEventArgs>

2010-05-26  Chris Toshok  <toshok@ximian.com>

	* Value.cs: correct field usage for Audio/VideoFormat classes.

	* Events.cs: add CreateSampleReadyEventArgsEventHandlerDispatcher
	and CreateVideoFormatChangedEventArgsEventHandlerDispatcher for
	the video capture stuff.

2010-05-26  Alan McGovern  <amcgovern@novell.com>

	* DoubleKeyedDictionary.cs: Sometimes we don't want to do the
	  sanity checks to make sure we don't have duplicates in the
	  ItemContainerGenerator dictionaries. It is legal to have one
	  item in multiple containers.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* IListExtensions.cs: Add a handy 'AddRange' extension method
	  to IList<T>.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* Helper.cs: Add some static "AreEqual" methods which do
	  reference and/or value equality testing as appropriate.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* NativeMethods.cs: Update to HttpRequest API.

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* Value.cs:
	* ManagedXamlLoader.cs: We always store the correct type in
	  our Value*s instead of failing over to Type::MANAGED now.
	  GCHandles can be checked for with the new "GCHandleFlag"
	  flag in the padding field. This should clear up a lot of
	  warnings about incompatible types.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Events.cs: Show console output on exceptions in debug mode too.

2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: We can attach bindings to
	  DependencyObjects now, so remove the check which enforced
	  FrameworkElements. Fixes more of 232.

2010-05-18  Alan McGovern  <amcgovern@novell.com>

	* IListExtensions.cs: Add BinarySearch extension method to
	  IList<T> so that I can binary search observable collections
	  (and others).

2010-05-17  Alan McGovern  <amcgovern@novell.com>
